--- a/requirements.txt
+++ b/requirements.txt
@@ -69,3 +69,13 @@ mcp>=0.1.0
 fastmcp>=0.1.0
 
 aiosqlite>=0.20.0  # Async SQLite support
+
+# Application Insights (optional, for Azure-specific telemetry)
+applicationinsights>=0.11.10
+azure-monitor-opentelemetry>=1.6.0
+opentelemetry-instrumentation-openai>=0.27.0
+azure-core-tracing-opentelemetry
+opentelemetry-sdk
+
+# Additional async support for orchestration
+asyncio>=3.4.3
