updated .env.template, exercise_4_sharepoint_tool.py

--- a/.env.template
+++ b/.env.template
@@ -30,6 +30,10 @@ FABRIC_CONNECTION_ID=your_fabric_connection_id_here
 # Azure Functions (optional)
 AZURE_FUNCTION_ENDPOINT=https://your-function-app.azurewebsites.net
 
+# SharePoint (optional)
+SHAREPOINT_CONNECTION_NAME=your_sharepoint_connection_name
+SHAREPOINT_RESOURCE_NAME=https://yourtenant.sharepoint.com/sites/yoursite
+
 # MCP Server Configuration
 # For local development (won't work with cloud agents):
 # MCP_SERVER_URL=http://localhost:3000
